# Quantum-Observability-Contract-Compilation-QOCC-

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  mkdocs.yml  prompt1.md  prompt2.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api_reference.md  generate_api_reference.py  index.md
docs/architecture/: bundle-format.md  search-pipeline.md  trace-model.md
docs/cli/: reference.md
docs/contracts/: reference.md
docs/tutorials/: adding-custom-adapter.md  debugging-regressions.md  first-trace-bundle.md  writing-contracts.md
examples/: cirq_trace_demo.py  contracts_examples.json  ghz.qasm  noise_model.json  qiskit_trace_demo.py  search_examples.json
examples/ci/: pre_commit_config.yaml  qocc_baseline.yml  qocc_benchmark.yml  qocc_pr_check.yml
examples/pipeline_examples/: cirq_default.json  qiskit_default.json
qocc/: __init__.py  api.py
qocc/adapters/: __init__.py  base.py  cirq_adapter.py  cudaq_adapter.py  ibm_adapter.py  qiskit_adapter.py  stim_adapter.py  tket_adapter.py
qocc/cli/: __init__.py  commands_bundle.py  commands_compare.py  commands_contract.py  commands_cross_check.py  commands_db.py  commands_init.py  commands_search.py  commands_trace.py  commands_validate.py  main.py  validation.py
qocc/contracts/: __init__.py  calibration.py  composition.py  dsl.py  eval_clifford.py  eval_exact.py  eval_qec.py  eval_qpt.py  eval_sampling.py  eval_topology.py  eval_zne.py  parametric.py  registry.py  spec.py  stats.py
qocc/core/: __init__.py  artifacts.py  bundle_diff.py  cache.py  canonicalize.py  circuit_handle.py  cross_check.py  format_bridge.py  hashing.py  nondeterminism.py  regression_db.py  replay.py  schemas.py  signing.py
qocc/metrics/: __init__.py  compute.py  duration_models.py  noise_model.py  topology.py
qocc/search/: __init__.py  evolutionary.py  scorer.py  selector.py  space.py  validator.py
qocc/trace/: __init__.py  emitter.py  exporters.py  html_report.py  jupyter_widget.py  span.py  visualization.py  watch.py
schemas/: bundle_diff.schema.json  cache_index.schema.json  contract_results.schema.json  contracts.schema.json  decoder_stats.schema.json  dem.schema.json  env.schema.json  logical_error_rates.schema.json  manifest.schema.json  metrics.schema.json  noise_model.schema.json  nondeterminism.schema.json  otlp_trace.schema.json  search_rankings.schema.json  search_result.schema.json  search_space.schema.json  seeds.schema.json  signature.schema.json  topology.schema.json  trace_span.schema.json
tests/: test_cache.py  test_compare.py  test_contract_evaluation.py  test_contracts_sampling.py  test_cudaq_adapter.py  test_cudaq_contract.py  test_hash_stability.py  test_metrics.py  test_nondeterminism.py  test_phase10_noise_model.py  test_phase10_regression_db.py  test_phase10_stim_qec.py  test_phase10_tket_adapter.py  test_phase11_hardware_execution.py  test_phase11_ibm_adapter.py  test_phase11_watch.py  test_phase12_batch.py  test_phase12_bayesian_prior.py  test_phase12_evolutionary.py  test_phase13_html_report.py  test_phase13_jupyter_widget.py  test_phase14_contract_cache.py  test_phase14_contract_composition.py  test_phase14_contract_dsl.py  test_phase14_parametric_contracts.py  test_phase15_mitigation.py  test_phase15_zne_contract.py  test_phase16_docs.py  test_phase16_init.py  test_phase17_bundle_diff.py  test_phase17_bundle_export.py  test_phase17_otel.py  test_phase17_signing.py  test_phase18_qpt.py  test_phase18_stats.py  test_phase19_cross_check.py  test_phase19_misc.py  test_phase3_features.py  test_phase4_features.py  test_phase5_features.py  (+8 more)
