[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qocc"
version = "0.1.0"
description = "Quantum Observability + Contract-Based Compilation — trace-first, vendor-agnostic layer for quantum workflows"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "QOCC Contributors" }]
keywords = ["quantum", "observability", "compilation", "contracts", "tracing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "click>=8.1",
    "jsonschema>=4.20",
    "numpy>=1.24",
    "rich>=13.0",
]

[project.optional-dependencies]
qiskit = ["qiskit>=1.0"]
cirq = ["cirq-core>=1.3"]
tket = ["pytket>=1.30"]
stim = ["stim>=1.12", "pymatching>=2.0"]
qec = ["stim>=1.12", "pymatching>=2.0"]
ibm = ["qiskit>=1.0", "qiskit-ibm-runtime>=0.34"]
jupyter = ["ipywidgets>=8.0", "plotly>=5.20"]
signing = ["cryptography>=42.0"]
otel = ["opentelemetry-api", "opentelemetry-sdk", "opentelemetry-exporter-otlp-proto-grpc"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]
all = ["qocc[qiskit,cirq,tket,stim,ibm,jupyter,signing,otel,dev]"]

[project.scripts]
qocc = "qocc.cli.main:cli"

[project.entry-points."qocc.adapters"]
tket = "qocc.adapters.tket_adapter:TketAdapter"
stim = "qocc.adapters.stim_adapter:StimAdapter"
ibm = "qocc.adapters.ibm_adapter:IBMAdapter"

[project.entry-points."qocc.evaluators"]
qec = "qocc.contracts.eval_qec:evaluate_qec_contract"

[project.urls]
Repository = "https://github.com/zerocool26/Quantum-Observability-Contract-Compilation-QOCC-"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
ignore_missing_imports = true
disable_error_code = [
    "no-any-return",
    "unused-ignore",
    "arg-type",
    "type-arg",
    "union-attr",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
